UI Update and Changes
UI Update:
 -Updated Production components selection of materials. Can now specify how much units to use
 -Units Used: kg, g, mg, oz, pc
 -Will now calculate the cost based on units and quantity
 -Adjustments to counter so that it will match the id and incrementation of tables

Backend:
 -Deduction of Materials based on Units is not yet implemented

--- a/views/notification.ejs
+++ b/views/notification.ejs
@@ -101,7 +101,7 @@
                                 }else{
                                     link = "/transferorder"
                                 }
-                                console.log(link)
+                                // console.log(link)
                                 // console.log('Appending new notification:', item.notifid);
                                 let fontWeight = (item.status === "UNREAD") ? 'bold' : 'normal';
                                 let pushNotification = `
@@ -169,7 +169,7 @@
             let notificationDiv = $(this).closest(".notification");
             let notifid = notificationDiv.find("a").attr("id");
 
-            console.log("notifid:", notifid);
+            // console.log("notifid:", notifid);
 
             $.ajax({
                 type: 'POST',
@@ -179,7 +179,7 @@
                 },
                 success: function (result) {
                     if (result.msg == 'success') {
-                        console.log('success')
+                        // console.log('success')
                     }
                 },
                 error: function (err) {
