--- a/views/productionmaterials/productionmaterialsscripts.ejs
+++ b/views/productionmaterials/productionmaterialsscripts.ejs
@@ -219,7 +219,7 @@
         }
 
         function LoadList() {
-            let data = [{unit: "Kilogram (kg)", id: "kg"}, {unit: "Gram (g)", id: "g"}, {unit: "Milligram (mg)", id: "mg"}, {unit: "Ounce (oz)", id: "oz"}];
+            let data = [{unit: "Kilogram (kg)", id: "kg"}, {unit: "Gram (g)", id: "g"}, {unit: "Milligram (mg)", id: "mg"}, {unit: "Ounce (oz)", id: "oz"}, {unit: "Piece (pc)", id: "pc"}];
 
             $.ajax({
                 type: "GET",
