--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -110,7 +110,7 @@
                                                 <td data-label="Unit" class="custom-mobile-align unit"></td>
                                                 <td data-label="Unit" class="custom-mobile-align unitcost"></td>
                                                 <td data-label="Unit" class="custom-mobile-align unitdeduct">
-                                                    <select class="form-control" id="unitdeduct0">
+                                                    <select class="form-control" name="unitDeduct" id="unitdeduct0">
                                                         <option value="">Select Unit</option>
                                                         <option value="kg">Kilogram</option>
                                                         <option value="oz">Ounce</option>
