--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -26,15 +26,17 @@
                             </div>
                         </div>
                         <div class="row mb-2">
-                            <div class="table-responsive scrollable-table-container-sm table-size">
+                            <div class="table-responsive scrollable-table-container-sm table-size border">
                                 <table class="table table-bordered custom-mobile-table" id="componentsmodal-dataTable" width="100%" cellspacing="10">
                                     <thead class="table-header">
                                         <tr>
                                             <th class = "col-3">Material Name</th> 
-                                            <th class = "col-3">Material ID</th> 
+                                            <th class = "col-1">ID</th> 
+                                            <th class = "col-1">Price/Unit</th> 
+                                            <th class = "col-1">Unit</th> 
+                                            <th class = "col-2">Unit Deduct</th> 
                                             <th class = "col-2">Quantity</th> 
                                             <th class = "col-2">Cost</th>  
-                                            <th class = "col-2">Units</th> 
                                             <th></th>    
                                         </tr>
                                     </thead>
