Product Component Update
Update Details:
-Updated to new version of selecting material dropdown [dropdown select/search]
-Can now add new materials on edit modal [haven't exclude already selected materials]
-Can now properly validate cost based on units, price and unitdeduct

--- a/views/productioncomponents/productioncomponentsscripts.ejs
+++ b/views/productioncomponents/productioncomponentsscripts.ejs
@@ -297,14 +297,6 @@
             })
         })
 
-        function populateExistingProductNames() {
-            const tableRows = document.querySelectorAll('#componentsmodal-dataTable tbody tr');
-            existingProductNames = Array.from(tableRows, row => {
-                const materiallistsElement = row.querySelector('[name="materiallistsmodal"]');
-                return materiallistsElement ? materiallistsElement.textContent.trim() : '';
-            });
-        }
-
         function componentUpdateModal() {
             var jsonData = [];
 
@@ -418,7 +410,7 @@
             const tr = input.closest('tr');
             const quantity = parseFloat(input.value) || 0;
             const totalCostElement = tr.querySelector('.totalcost');
-            console.log(unit, unitdeduct)
+            console.log(unit, unitdeduct, cost)
 
             let ratio = 1;
 
@@ -446,106 +438,149 @@
             const computation = parseFloat(quantity) * ratio;
             console.log("Ratio:", ratio, `${unit} to ${unitdeduct}`);
             totalCost = parseFloat(cost) * computation;
-                    
+            console.log("Totalcost:",totalCost, input)
             totalCostElement.textContent = formatCurrency(totalCost);
         }
 
         $(document).on('click', '#addRow', function () {
-            populateExistingProductNames()
             addNewRowModal(dropdownCounterModal);
         });
 
         function addNewRowModal() {
-            // dropdownCounterModal++
-            // console.log("New Row Added: ", dropdownCounterModal)
-            // let row = $('#componentsmodal-dataTable').find('tr').last();
-            // let newActionBtn = '<button class="btn btn-outline-danger delete-row" id="deleterow"><i class="fas fa-trash-alt"></i></button>';
-            // let newrow = '<select class="form-control text-center" name="materiallistsmodal" id="materiallistsmodal' + dropdownCounterModal + '"><option value="">Select Material</option></select>';
-            // var newRow =`
-            //     <td data-label="Material Name" class="custom-mobile-align"> ${newrow} </td> +
-            //     <td data-label="Material ID" class="custom-mobile-align material-id materialid"></td> +
-            //     <td data-label="Quantity" class="custom-mobile-align">
-            //         <div class="row justify-content-center">
-            //             <input name="quantity" type="number" class="form-control quantity" placeholder="0.00" value="" maxlength="8"> 
-            //         </div>
-            //     </td> 
-            //     <td data-label="Cost" class="custom-mobile-align"> <span class="totalcost">0.00</span></td> +
-            //     <td data-label="Unit" class="custom-mobile-align units unit"></td> +
-            //     <td data-label="Action" class="custom-mobile-align delete-row"></td>`
-            // $('#componentsmodal-dataTable').append(newRow);
+            dropdownCounterModal++
+            const tableBody = document.querySelector('#componentsmodal-dataTable tbody');
+            const tr = document.createElement('tr');
+            tableBody.appendChild(tr);
+            tr.innerHTML = `
+                <td class="custom-mobile-align" data-label="Material Name">
+                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Material" name="editMaterial" id="editMaterial${dropdownCounterModal}" />
+                    <input autocomplete="off" type="hidden" id="editMaterialID${dropdownCounterModal}" name="editMaterialID" />
+                    <div class="col">
+                        <div class="custom-dropdown cdw-tableoption" id="editMaterialDropdown${dropdownCounterModal}"></div>
+                    <div class="col">
+                </td>
+                <td data-label="Material ID" class="custom-mobile-align material-id materialid"></td>
+                <td class="custom-mobile-align priceUnit" data-label="Price/Unit"></td>
+                <td class="custom-mobile-align units" data-label="Units"></td>
+                <td class="custom-mobile-align unitdeduct" data-label="Unit Deduct">
+                    <select class="form-control" name="unitDeduct" id="modalUnitDeduct${dropdownCounterModal}">
+                        <option value="kg">Kilogram</option>
+                        <option value="oz">Ounce</option>
+                        <option value="g">Gram</option>
+                        <option value="mg">Milligram</option>
+                        <option value="pc">Piece</option>
+                    </select>
+                </td>
+                <td class="custom-mobile-align">
+                    <div class="row justify-content-center">
+                        <input name="quantity" id="newRowQuantity${dropdownCounterModal}" type="number" class="form-control w-50 quantity-input" placeholder="0.00" value="" maxlength="8">
+                    </div>
+                </td>
+                <td class="custom-mobile-align" data-label="Product Name"><span class="totalcost"></span></td>
+                <td><button class="btn btn-outline-danger delete-row" id="deleterow"><i class="fas fa-trash-alt"></i></button></td>`;
 
-            // addRowButton.prop('disabled', true);
+            
+            $(document).on('keyup', `#newRowQuantity${dropdownCounterModal}`, function () {
+                const row = $(this).closest('tr');
+                let price = RemoveCurrencyFormatting(row.find('.priceUnit').text());
+                let unit = row.find('.units').text();
+                let unitdeduct = row.find(`select[name=unitDeduct]`).val();
+                console.log('Quantity changed:', this.value);
 
-            // $(document).on('change', '#materiallistsmodal' + dropdownCounterModal, function () {
-            //     let newmaterialid = $(this).val();
-            //     console.log(newmaterialid);
-            //     let existingValues = [];
+                updateTotalCost(this, price, unit, unitdeduct);
+            });
 
-            //     let currentRow = $(this).closest('tr');
-            //     let actionButton = currentRow.find('.delete-row');
+            $.ajax({
+                type: "GET",
+                url: "/productionmaterials/load",
+                success: function (result) {
+                    let activeData = [];
+                    let dropdownID = `editMaterialDropdown${dropdownCounterModal}`;
+                    let inputID = `editMaterial${dropdownCounterModal}`;
+                    let hiddenID = `editMaterialID${dropdownCounterModal}`;
+                    let container = result.data;
+                    console.log("Edit Container:", container);
 
-            //     $('#componentsmodal-dataTable select[name="materiallistsmodal"]').each(function () {
-            //         let selectedValue = $(this).val();
-            //         if (selectedValue !== null && selectedValue !== "") {
-            //             existingValues.push(selectedValue);
-            //         }
-            //     });
+                    $.each(container, (key, item) => {
+                        if (item.status === "ACTIVE") {
+                            let name = item.productname;
+                            let id = item.productid;
+                            activeData.push({
+                                    display: name,
+                                value: id,
+                            });
+                        }
+                    });
+                    AddMaterialEdit(dropdownID, activeData, inputID, hiddenID);
+                },
+                error: function (err) {
+                    warning("Warning", err);
+                },
+            });
+        }
 
-            //     let isDuplicate = existingValues.filter(value => value === newmaterialid).length > 1;
+        function AddMaterialEdit(dropdownID, activeData, inputID, hiddenID) {
+            for (const data of activeData) {
+                AddMaterialEditDropdown(dropdownID, data.display, data.value, inputID, hiddenID);
+            }
+        }
+        function AddMaterialEditDropdown(dropdownID, displayText, actualValue, inputID, hiddenID) {
+            const dropdownElement = $("#" + dropdownID);
+            const hiddenInput = $("#" + hiddenID);
+            
+            const newOption = $("<div>")
+                .addClass("dropdown-option")
+                .text(displayText)
+                .attr("data-value", actualValue);
 
-            //     if (isDuplicate) {
-            //         warning('Duplicate!', `Material already exist.`);
-            //         $(this).val('');
-            //     } else {
-            //         $.ajax({
-            //             type: 'POST',
-            //             url: '/productionmaterials/getmaterials',
-            //             data: {
-            //                 materialid: newmaterialid,
-            //             },
-            //             success: function (result) {
-            //                 console.log(result.data)
-            //                 let data = result.data;
-            //                 $.each(data, function (index, item) {
-            //                     computecost(item.price, currentRow);
-            //                     currentRow.find('.material-id' + dropdownCounterModal).text(item.productid);
-            //                     currentRow.find('.unit' + dropdownCounterModal).text(item.unit);
-            //                 });
-            //                 addRowButton.prop('disabled', newmaterialid === null || newmaterialid === '');
-            //             },
-            //             error: function (err) {
-            //                 warning("Warning", err)
-            //             }
-            //         });
-            //         if (newmaterialid !== '') {
-            //             actionButton.html(newActionBtn);
-            //         } else {
-            //             actionButton.html('');
-            //         }
-            //         $(this).prop('disabled', true);
-            //     }
+            newOption.on("click", function () {
+                let actionBtn = '<button class="btn btn-sm btn-outline-danger" id="deleterow"><i class="fas fa-trash-alt"></i></button>';
+                let quantityInput =
+                    `<div class="row justify-content-center">
+                        <input autocomplete="off" id="quantity" name="quantity" type="number" class="form-control quantity" placeholder="0.00" value="" maxlength="8">
+                    </div>`;
+                const inputElement = $("#" + inputID);
+                const row = inputElement.closest("tr");
 
-            // });
+                inputElement.val(displayText);
+                hiddenInput.val(actualValue);
+                dropdownElement.hide();
 
-            // $.ajax({
-            //     type: 'GET',
-            //     url: '/productionmaterials/load',
-            //     success: function (result) {
-            //         var data = result.data;
-            //         $.each(data, function (key, item) {
-            //             if (item.status == "ACTIVE") {
-            //                 // Check if the product name already exists in the table
-            //                 if (!existingProductNames.includes(item.productname)) {
-            //                     var options = new Option(item.productname, item.productid);
-            //                     $('#materiallistsmodal' + dropdownCounterModal).append(options);
-            //                 }
-            //             }
-            //         });
-            //     },
-            //     error: function (err) {
-            //         warning("Warning", err)
-            //     }
-            // });
+                inputElement.trigger("change").prop("disabled", true);
+                // console.log(actualValue);
+                selectedMaterial.push(displayText);
+                row.find(".material-id").text(actualValue);
+
+                $.ajax({
+                    type: 'POST',
+                    url: '/productionmaterials/getmaterials',
+                    data: {
+                        materialid: actualValue,
+                    },
+                    success: function (result) {
+                        // console.log(result.data)
+                        let data = result.data;
+                        console.log("New Row Option:", data);
+                        row.find(".units").text(data[0].unit);
+                        row.find(".priceUnit").text(formatCurrency(data[0].price));
+
+                        if(data[0].unit == 'pc'){
+                            row.find(`select[name="unitDeduct"]`).val(data[0].unit).prop("disabled", true);
+                        }else{
+                            row.find(`select[name="unitDeduct"]`).val(data[0].unit);
+                        }
+                        $(`#newRowQuantity${dropdownCounter}`).prop('disabled', false);
+                        $(`#addRow`).prop('disabled', false);
+
+                    },
+                    error: function (err) {
+                        warning("Warning", err);
+                    }
+                });
+
+            });
+            dropdownElement.append(newOption);
+            SetupDropdown(inputID, dropdownID, "dropdown-option");
         }
         //#endregion
 
